--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
 
     
     <table border="1">
-       <thead>
-          <tr> <th> Kolumna 1 <th> Kolumna 2 <th> Kolumna 3
-       <tbody>
-          <tr> <th> wiersz 1 <td> wiersz 2 <td> wiersz 3
-          <tr> <th> wiersz 4 <td> wiersz 5 <td> wiersz 6
-          <tr> <th> wiersz 7 <td> wiersz 8 <td> wiersz 9
+        <thead>
+          <tr> <th> Kolumna 1</th> <th> Kolumna 2</th> <th> Kolumna 3</th>
+        </thead>
+        <tbody>
+          <tr> <td> wiersz 1 <td> wiersz 2 <td> wiersz 3 </tr>
+          <tr> <td> wiersz 4 <td> wiersz 5 <td> wiersz 6 </tr>
+          <tr> <td> wiersz 7 <td> wiersz 8 <td> wiersz 9 </tr>
         </tbody>
+       
     </table>
 
