--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <table border="1">
         <thead>
-          <tr> <th> Kolumna 1</th> <th> Kolumna 2</th> <th> Kolumna 3</th>
+          <tr> <th> Kolumna 1</th> <th> Kolumna 2</th> <th> Kolumna 3</th> </tr>
         </thead>
         <tbody>
           <tr> <td> wiersz 1 <td> wiersz 2 <td> wiersz 3 </tr>
